--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dagger Example</string>
     <string name="label_logout">Logout</string>
+    <string name="label_profile">Profile</string>
+    <string name="label_post">Post</string>
 </resources>
